--- a/templates/deletepdf.html
+++ b/templates/deletepdf.html
@@ -900,11 +900,11 @@
                 const footerLinks = document.querySelectorAll('.footer-links a');
                 footerLinks.forEach(link => {
                     const href = link.getAttribute('href');
-                    if (href === 'blog.html') {
+                    if (href === 'https://imasterpdf.com/blog') {
                         link.href = mainSiteUrl + '/blog';
-                    } else if (href === 'about.html') {
+                    } else if (href === 'https://imasterpdf.com/about') {
                         link.href = mainSiteUrl + '/about';
-                    } else if (href === 'contact.html') {
+                    } else if (href === 'https://imasterpdf.com/contact') {
                         link.href = mainSiteUrl + '/contact';
                     } else if (href === 'privacy.html') {
                         link.href = mainSiteUrl + '/privacy';
